--- a/styles.css
+++ b/styles.css
@@ -27,9 +27,9 @@ select {
 
 iframe {
   width: 805px;
-  height: 100vh;
   margin: 0;
   border: none;
+  flex-grow: 1;
 }
 
 #app-title p {
@@ -62,6 +62,14 @@ iframe {
   text-align: center;
 }
 
-#show-info{
+#show-info {
   text-decoration: none;
+}
+#resizer {
+  resize: horizontal;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  height: 100vh;
 }
