--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ body {
   background-repeat: no-repeat;
 }
 
+strong {
+  font-size: 16px;
+}
+
 a {
   color: blue;
 }
@@ -74,7 +78,7 @@ iframe {
   opacity: 1;
 }
 
-#info-modal > div {
+#info-modal > div, #corsanywhere-modal > div {
   width: 50%;
 }
 
